adjusted footer to be fixed to bottom and added spacing to profile page parent div to allow for space at bottom with open accordions

--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -1,3 +1,3 @@
 .overflow-control {
-    overflow: auto;
+    margin-bottom: 6rem;
 }
